--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -43,8 +43,8 @@
           type: [ Moth ]
       - !type:SatiateHunger
         conditions:
-        - !type:OrganType
-          type: Golem
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
 
 - type: reagent
   id: BuzzochloricBees
@@ -141,9 +141,9 @@
           inverted: true
           tag: Bee
 # WL android species start
-        - !type:OrganType
-          type: Biorobotic
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Biorobotic ]
+          inverted: true
 # WL android species end
 
 - type: reagent
@@ -185,8 +185,8 @@
         refresh: false
         conditions:
         # Golem
-        - !type:OrganType
-          type: Golem
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
 # WL species end
 
 - type: reagent
@@ -219,9 +219,9 @@
 # WL species start
         conditions:
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         damage:
           types:
@@ -281,9 +281,9 @@
 # WL species start
         conditions:
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         damage:
           types:
@@ -296,9 +296,9 @@
           max: 35
 # WL species start
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         type: Local
         visualType: LargeCaution
@@ -311,9 +311,9 @@
           max: 35
 # WL species start
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         type: Local
         visualType: LargeCaution
@@ -325,9 +325,9 @@
           min: 160.15 # not quite enough for cryo, but can speed it up if you wanna take the risk
 # WL species start
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         amount: -10000
       - !type:MovementSpeedModifier
@@ -337,9 +337,9 @@
           max: 40 # slows when less than 40
 # WL species start
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         walkSpeedModifier: 0.6
         sprintSpeedModifier: 0.6
@@ -350,9 +350,9 @@
           min: 40 # your legs stop working when above 40
 # WL species start
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         walkSpeedModifier: 0.00
         sprintSpeedModifier: 0.00
@@ -363,9 +363,9 @@
           min: 40
 # WL species start
         # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Golem ]
+          inverted: true
 # WL species end
         type: Local
         visualType: LargeCaution
@@ -376,7 +376,7 @@
       effects:
       - !type:AdjustTemperature
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           min: 160.15
         amount: -10000
       - !type:SatiateHunger
@@ -387,7 +387,7 @@
              Cold: 0.01 # slightly nips directly, other cold damage comes from the temp change
       - !type:GenericStatusEffect
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Fresium
           min: 8
         key: ForcedSleep
