--- a/Resources/Prototypes/_WL/Entities/Tiles/water.yml
+++ b/Resources/Prototypes/_WL/Entities/Tiles/water.yml
@@ -63,7 +63,7 @@
         - Catwalk
   - type: TileEntityEffect
     effects:
-    - !type:ExtinguishReaction
+    - !type:Extinguish
 
 - type: entity
   parent: FloorWaterEntityNoAnim
