--- a/Resources/Prototypes/_WL/Body/Organs/cischi.yml
+++ b/Resources/Prototypes/_WL/Body/Organs/cischi.yml
@@ -4,7 +4,7 @@
   abstract: true
   components:
   - type: Organ
-  - type: Food
+  - type: Edible
   - type: Extractable
     grindableSolutionName: organ
   - type: SolutionContainerManager
