--- a/Resources/Prototypes/Reagents/narcotics.yml
+++ b/Resources/Prototypes/Reagents/narcotics.yml
@@ -172,6 +172,7 @@
           reagent: Ephedrine
           min: 30
 # WL species start
+        - !type:MetabolizerTypeCondition
           type: [ Golem, Biorobotic ]
           inverted: true
 # WL species end
@@ -289,7 +290,6 @@
         effectProto: StatusEffectSeeingRainbow
         time: 16
         type: Add
-        refresh: false
 # WL species start
         conditions:
         # Golem
@@ -356,7 +356,6 @@
         effectProto: StatusEffectSeeingRainbow
         time: 10
         type: Add
-        refresh: false
 # WL species start
         conditions:
         # Golem
@@ -392,7 +391,6 @@
        - !type:GenericStatusEffect
          key: ForcedSleep
          component: ForcedSleeping
-         refresh: false
          type: Add
 
 - type: reagent
@@ -410,7 +408,6 @@
         effectProto: StatusEffectSeeingRainbow
         type: Add
         time: 5
-        refresh: false
 # WL species start
         conditions:
         # Golem
@@ -434,7 +431,6 @@
         effectProto: StatusEffectSeeingRainbow
         type: Add
         time: 5
-        refresh: false
 # WL species start
         conditions:
         # Golem
