--- a/Resources/Prototypes/Reagents/gases.yml
+++ b/Resources/Prototypes/Reagents/gases.yml
@@ -105,7 +105,7 @@
       - !type:SatiateHunger
         conditions:
         - !type:MetabolizerTypeCondition
-          type: Golem
+          type: [ Golem ]
     Poison:
       effects:
       - !type:HealthChange
@@ -438,7 +438,6 @@
         conditions:
         - !type:MetabolizerTypeCondition
           type: [ Cischi ]
-        scaleByQuantity: true
         ignoreResistances: true
         damage:
           types:
@@ -484,6 +483,5 @@
           min: 5
         key: ForcedSleep
         component: ForcedSleeping
-        refresh: false
         type: Add
 # WL golem species end
