--- a/Resources/Prototypes/Entities/Objects/Materials/ore.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/ore.yml
@@ -93,9 +93,20 @@
   - type: SolutionContainerManager
     solutions:
       diamondore:
+        temperature: 293.15
+        canReact: True
+        maxVol: 20
+        name: null
         reagents:
-        - ReagentId: Carbon
+        - data: []
+          ReagentId: Carbon
           Quantity: 20
+      food:
+        temperature: 293.15
+        canReact: True
+        maxVol: 0
+        name: food
+        reagents: []
   - type: Item
     heldPrefix: diamond
 
